# rust-connected-services-reference

./: Cargo.toml  docker-compose.yml
service-a/: Cargo.toml
service-a/src/: main.rs
service-b/: Cargo.toml  Dockerfile
service-b/src/: main.rs
service-c/: Cargo.toml
service-c/src/: main.rs
service-d/: Cargo.toml  Dockerfile
service-d/src/: main.rs  models.rs
