[package]
name = "service-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
axum = "0.7.5"
serde = { version = "1.0.203", features = ["serde_derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

opentelemetry = "0.23.0"
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }
opentelemetry-stdout = "0.4.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "trace"] }
opentelemetry-http = { version = "0.12", features = ["reqwest"] }
tracing-opentelemetry = "0.24.0"
reqwest-tracing = "0.5.1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
