[package]
name = "service-b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#reqwest = { version = "0.11", features = ["json"] }
axum = "0.7.5"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0.203", features = ["serde_derive"] }
openssl = { version = "0.10.35", features = ["vendored"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
opentelemetry = "0.23.0"
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "trace"] }
opentelemetry-http = { version = "0.12", features = ["reqwest"] }
opentelemetry-stdout = "0.4.0"
tracing-opentelemetry = "0.24.0"
reqwest-tracing = "0.5.1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
reqwest-middleware = "0.3"
